# esp32c3

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs
