[package]
name = "esp32c3"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "esp32c3",
    "uart"
]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
uart = ["esp-println/uart"]

[dependencies]
esp-hal = { version = "0.18.0", features = ["log"] }
esp-backtrace = { version = "0.12.0", features = ["exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.9.1", default-features = false, features = ["critical-section", "colors"] }
fugit = "0.3.7" 

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false